[package]
name = "hypreww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
hyprland = "0.3"
#freedesktop-icon-lookup = "0.1"
freedesktop-icons = "0.2"
serde_json = "1.0"
serde = "1.0"

