[package]
name = "hypreww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
hyprland = { version = "0.3", features = ["silent"] }
#freedesktop-icon-lookup = "0.1"
freedesktop-icons = "0.2"
serde_json = "1.0"
serde = "1.0"
clap = { version = "4.5.*", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
opt-level = 3
#opt-level = "z"
lto = "fat"
strip = "symbols"
# strip = true
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false

